# WriteMe

./: LICENSE  README.md  WRITEME.md  pyproject.toml
.github/workflows/: publish-to-pypi.yml
src/writeme/: _cli.py  _commands.py  _renderer.py  _sourcecode.py
