[build-system]
requires = ["uv-build"]
build-backend = "uv_build"

[project]
name = "pywriteme"
version = "0.3.0"
description = "Templating engine for README and other markdown files"
requires-python = ">=3.12"
authors = [{ name = "Baptiste Pestourie" }]
readme = "README.md"
dependencies = ["click", "mistletoe"]

[tool.uv.build-backend]
module-name = "writeme"

[project.scripts]
writeme = "writeme._cli:writeme"

[tool.mypy]
ignore_missing_imports = true
